fix: text color in dark mode by bootstrap modal dialogs

--- a/legacy/theming.css
+++ b/legacy/theming.css
@@ -21,6 +21,11 @@ body {
   color: var(--text-color);
 }
 
+/* Overwriting text color in bootstrap modal dialogs */
+.modal {
+  color: black !important;
+}
+
 /* div,
 input,
 textarea,
